--- a/www/css/byron_supply_company.css
+++ b/www/css/byron_supply_company.css
@@ -1,8 +1,8 @@
 
 body {
     font-family: sans-serif;
-    margin: 0;
     margin-top: 100px;
+    background-color: blanchedalmond
 }
 /*Start nav code*/
 nav {
@@ -47,9 +47,32 @@ nav > div > a {
     display: block;
 }
 
+#emptyDivTopNav {
+    height: 2px;
+}
+
 /*End nav code*/
 
+/*Welcome banner*/
+#welcomeBanner {
+    line-height: 30px;
+    text-align: center;
+    position: fixed;
+    background-color: white;
+    min-width: 20%;
+    border-style: solid;
+    border-width: 0 0.5px 0.5px 0.5px;
+    z-index: 1;
+    right: 0;
+    margin-top: 1px;
+}
+/* */
 
+/*Slides*/
+#slides {
+  display: none;
+}
+/* */
 @media screen and (max-width: 820px) {
 /*Start nav code*/
     #navHeader {
@@ -69,5 +92,11 @@ nav > div > a {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
-}
 /*End nav code*/
+
+    /*Welcome banner*/
+    #welcomeBanner {
+        display: none;
+    }
+/* */
+}
