--- a/web/css/byron_supply_company.css
+++ b/web/css/byron_supply_company.css
@@ -1,9 +1,16 @@
 
 body {
     font-family: sans-serif;
+    margin:0;
     margin-top: 100px;
-    background-color: blanchedalmond
+    background-color: blanchedalmond;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
 /*Start nav code*/
 nav {
     width: 100%;
@@ -42,8 +49,6 @@ nav > div {
 }
 
 nav > div > a {
-    text-decoration: none;
-    color: black;
     display: block;
 }
 
@@ -68,11 +73,13 @@ nav > div > a {
 }
 /* */
 
-/*Slides*/
-#slides {
-  display: none;
+/*Start footer code*/
+footer {
+    text-align: center;
+    font-size: 0.85em;
 }
 /* */
+
 @media screen and (max-width: 820px) {
 /*Start nav code*/
     #navHeader {
