--- a/web/css/byron_supply_company.css
+++ b/web/css/byron_supply_company.css
@@ -1,8 +1,6 @@
-
 body {
     font-family: sans-serif;
     margin:0;
-    margin-top: 100px;
     background-color: blanchedalmond;
 }
 
@@ -16,22 +14,24 @@ nav {
     width: 100%;
     position: fixed;
     z-index: 1;
-    background-color: white;
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    background-color: blanchedalmond;
     text-align: center;
     border-bottom: solid 0.5px;
     border-top: solid 0.5px;
     left: 0;
     right: 0;
-    top: 0;
-    
+    top: 0;    
 }
 
+#dummyNav {
+    height: 100px;
+}
 nav > div {
     line-height: 100px;
     transition: background-color 0.5s ease;
-    background-color: white;
+    background-color: rgba(255,255,255, 0.8);
     border-left: solid 0.5px;
 }
 
@@ -59,17 +59,38 @@ nav > div > a {
 /*End nav code*/
 
 /*Welcome banner*/
-#welcomeBanner {
-    line-height: 30px;
+#welcomeBannerBackground {
+	line-height: 30px;
     text-align: center;
     position: fixed;
-    background-color: white;
+    background-color: blanchedalmond;
     min-width: 20%;
     border-style: solid;
     border-width: 0 0.5px 0.5px 0.5px;
     z-index: 1;
     right: 0;
     margin-top: 1px;
+}
+
+#welcomeBanner {
+    display: grid;
+    grid-template-columns: 3fr 1fr 3fr;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+#welcomeBanner > div {
+    float: left;
+	
+}
+#welcomeBanner > a {
+    display: block;
+}
+
+/* */
+
+/*Start page layout code*/
+#pageLayout {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
 }
 /* */
 
