--- a/web/css/index.css
+++ b/web/css/index.css
@@ -1,14 +1,14 @@
-#slides {
+#hero {
 	width: 100%;
     max-height: 500px;
     border: solid black;
-    margin: 0 auto;
-}
-
-p {
     text-align: center;
 }
-/*temp code*/
-#slides {
-    height: 500px;
+#hero > img {
+    width: 100%;
+    max-height: 500px;
+    margin: 0 auto;
+}
+p {
+    text-align: center;
 }
