--- a/djClassProject/src/main/webapp/resources/css/products.css
+++ b/djClassProject/src/main/webapp/resources/css/products.css
@@ -24,12 +24,8 @@ img {
 
 }
 
-.product > a {
-	display: block;
-    height: 100%;
-}
-
-.product > a:hover {
+.product:hover {
     transition: background-color 0.5s ease;
     background-color: rgba(255, 235, 205, 0.8);
+    cursor: pointer;
 }
