adjusted display of items on the cart page

--- a/djClassProject/src/main/webapp/resources/css/cart.css
+++ b/djClassProject/src/main/webapp/resources/css/cart.css
@@ -21,3 +21,16 @@
 #test {
     height: 1000px;
 }
+
+.quantityField {
+    width: 30px;
+    text-align: center;
+}
+
+.cartSummaryDataTable {
+    width: 100%;
+}
+
+.cartProductImage {
+    width: 100px;
+}
